# document-generator

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  action.yml  justfile  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/: gh_api.py  main.py  pdf_gen.py  template_gen.py
typst-templates/: document.typ  main.typ  problem.typ
